[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-batch-image-processor"
version = "2.1.0"
description = "Kontext Bench风格的ComfyUI图像差异分析节点，支持指令式prompt生成和批量TXT编辑"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Asir", email = "asir@example.com"}
]
maintainers = [
    {name = "Asir", email = "asir@example.com"}
]
keywords = [
    "comfyui",
    "image-processing", 
    "computer-vision",
    "batch-processing",
    "kontext-bench",
    "prompt-generation",
    "ssim",
    "image-difference"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.13.0",
    "numpy>=1.21.0", 
    "pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "scikit-image>=0.19.0",
    "scipy>=1.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0", 
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950"
]
viz = [
    "matplotlib>=3.5.0",
    "tqdm>=4.62.0"
]

[project.urls]
Homepage = "https://github.com/asir/comfyui-batch-image-processor"
Repository = "https://github.com/asir/comfyui-batch-image-processor"
Issues = "https://github.com/asir/comfyui-batch-image-processor/issues"
Documentation = "https://github.com/asir/comfyui-batch-image-processor/blob/main/README.md"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["comfyui_batch_image_processor"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.html"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov --cov-report=term-missing" 